hphp/hack/test/typecheck/constmap.php.like_types.exp
File "constmap.php", line 14, characters 14-15:
Invalid argument (Typing[4110])
File "constmap.php", line 13, characters 20-25:
Expected ~string because it is an unenforceable type
File "collections/Map.hhi", line 57, characters 59-60:
  via this generic Tk
File "collections/interfaces.hhi", line 1126, characters 59-60:
  via this generic Tk
File "constmap.php", line 12, characters 30-37:
But got arraykey
